# SimLogue

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SimLogue.sln  circuits.sln  documentation.md  lingebra.natvis  multishow0.plt
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  string_repr.h
circuits/: circuits.vcxproj  circuits.vcxproj.filters
circuits/examples/: RCtest.simlog  ac_v_source.simlog  resonance.simlog  switch_test.simlog  syntax_proposals.simlog
circuits/src/: lingebra.h  main.cpp  settings.cpp  settings.h  sparse_test.py  thread_pool.h
circuits/src/circuit/: ammeter.cpp  ammeter.h  circuit.cpp  circuit.h  circuit_matrix.cpp  circuit_matrix.h  n_pin_part.h  node.cpp  node.h  part.h  part_base.cpp  part_base.h  resistor.cpp  resistor.h  scope.cpp  scope.h  types.h  util.h  voltage_source.cpp  voltage_source.h  voltmeter.h
circuits/src/circuit/interpreter/: interpreter.cpp  interpreter.h
circuits/src/circuit/parts/: ac_voltage_source.cpp  ac_voltage_source.h  capacitor.cpp  capacitor.h  current_source.cpp  current_source.h  inductor.cpp  inductor.h  resistor.cpp  resistor.h  switch.cpp  voltage_source.cpp  voltage_source.h
circuits/src/lingebra/: lingebra.h
cmake/: version.h.in
examples/: RCL_oscillator.simlog  current_source.simlog  integrator.simlog  resonance.simlog  syntax_proposals.simlog
src/: main.cpp  settings.cpp  settings.h
src/circuit/: circuit.cpp  circuit.h  n_pin_part.h  node.h  part.h  pin.h  scalar.h  scope.cpp  scope.h  util.cpp  util.h
src/circuit/interpreter/: interpreter.cpp  interpreter.h  quantity.h
src/circuit/parts/: ac_voltage_source.cpp  ac_voltage_source.h  capacitor.cpp  capacitor.h  current_source.cpp  current_source.h  inductor.cpp  inductor.h  op_amp.cpp  op_amp.h  resistor.cpp  resistor.h  switch.cpp  switch.h  voltage_source.cpp  voltage_source.h
src/lingebra/: lingebra.h
